# Xylem

./: .env.template  .gitignore  README.md  package-lock.json  package.json
agents-sdk/: .env.template
agents-sdk/arbitrage_tracker/: .env.template
agents-sdk/arbitrage_tracker/src/: detector.rs  main.rs
agents-sdk/common/src/: horizon.rs  lib.rs  payment.rs  pubsub.rs  stellar_tx.rs  wallet.rs
agents-sdk/liquidity_slippage_tracker/: .env.template  Cargo.toml
agents-sdk/liquidity_slippage_tracker/src/: config.rs  main.rs  slippage.rs  tracker.rs
agents-sdk/mempool_monitor/: .env.template
agents-sdk/mempool_monitor/src/: alerts.rs  main.rs  monitor.rs
agents-sdk/mev_bot/: .env.template
agents-sdk/mev_bot/src/: main.rs  strategy.rs
agents-sdk/relayer/: .env.template  Cargo.toml
agents-sdk/relayer/src/: config.rs  main.rs  relay.rs
agents-sdk/trading_bot/: .env.template
agents-sdk/trading_bot/src/: main.rs  strategy.rs
app/: globals.css  page.tsx
app/api/ably/token/: route.ts
app/api/agents/[id]/run/: route.ts
components/: HeroScene.tsx  LiveFeed.tsx  ProtocolFlow.tsx
consumers/: a2a-router.ts  agent-executor.ts  billing-aggregator.ts  chain-syncer.ts  index.ts  marketplace-feed.ts  payment-verifier.ts
hooks/: useMarketplaceFeed.ts
lib/: kafka.ts  stellar.ts
types/: events.ts
